syntax = "proto3";

package com.myproject.bookwebservice;

service BookService {
  rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
  rpc GetBookById(GetBookByIdRequest) returns (BookResponse);
  rpc AddBook(AddBookRequest) returns (BookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (BookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}

message GetAllBooksRequest {
}

message GetAllBooksResponse {
  repeated BookResponse books = 1;
}

message GetBookByIdRequest {
  string id = 1;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message DeleteBookRequest {
  string id = 1;
}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message DeleteBookResponse {
  bool success = 1;
}